# office

./: .gitignore  LICENSE  README.md  docker-compose.yml
back_end_app/: index.html  package-lock.json  package.json  server.js
db/: query.sql
full_stack_app/: docker-compose.yml
full_stack_app/Kube/: db.yaml  nodejs-pod.yaml  pgadmin.yaml  pyapp-sub.yaml  pyapp.yaml  rabbitmq.yaml
full_stack_app/database/: table_create_script.sql
full_stack_app/express_app/: Dockerfile  Dockerfile.deps  build-deps copy.sh  build-deps.sh  build_image.bat  build_image.sh  package-lock.json  package.json  server.js  server2.js
full_stack_app/python_app/: Dockerfile.deps  main-add.py  requirements.txt  trail.py
full_stack_app/python_app_add/: Dockerfile  build-deps copy.sh  build-deps.sh  build_image.bat  build_image.sh  trail.py
full_stack_app/python_app_add_01/: Dockerfile  build_image.bat  build_image.sh  trail.py
full_stack_app/python_app_add_02/: Dockerfile  build_image.bat  build_image.sh  trail.py
full_stack_app/python_app_div/: Dockerfile  build-deps copy.sh  build_image.bat  build_image.sh  trail.py
full_stack_app/python_app_div_01/: Dockerfile  build_image.bat  build_image.sh  trail.py
full_stack_app/python_app_div_02/: Dockerfile  build_image.bat  build_image.sh  trail.py
full_stack_app/python_app_mul/: Dockerfile  build-deps copy.sh  build_image.bat  build_image.sh  trail.py
full_stack_app/python_app_mul_01/: Dockerfile  build_image.bat  build_image.sh  trail.py
full_stack_app/python_app_mul_02/: Dockerfile  (+3 more)
python_app/: app.py  pyproject.toml
(+14 files in other folders)
